[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Obstaculos.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nave.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bg_Galaxia.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bala.tscn" type="PackedScene" id=6]

[node name="Node" type="Node"]
script = ExtResource( 1 )
Barra_enemigo = ExtResource( 2 )

[node name="Nave" parent="." instance=ExtResource( 3 )]

[node name="Enemigo_timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Bg_Galaxia" parent="." instance=ExtResource( 4 )]

[node name="Score_timer" type="Timer" parent="."]

[node name="Star_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Posicion_inicio" type="Position2D" parent="."]
position = Vector2( 378.516, 614.859 )

[node name="Interfaz" parent="." instance=ExtResource( 5 )]

[node name="Posicion_barra" type="Position2D" parent="."]

[node name="Bala" parent="." instance=ExtResource( 6 )]

[node name="Bala2" parent="." instance=ExtResource( 6 )]
position = Vector2( 545.833, -155.969 )
[connection signal="body_entered" from="Nave" to="Nave" method="_on_Nave_body_entered"]
[connection signal="golpe" from="Nave" to="." method="_on_Nave_golpe"]
[connection signal="timeout" from="Enemigo_timer" to="." method="_on_Enemigo_timer_timeout"]
[connection signal="timeout" from="Score_timer" to="." method="_on_Score_timer_timeout"]
[connection signal="timeout" from="Star_timer" to="." method="_on_Star_timer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
